process hidden column ,row