@@ -99,6 +99,16 @@
 			<artifactId>jtidy</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+		<dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId> 
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-migrationsupport</artifactId> 
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -112,8 +122,7 @@
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-	                <compilerArgs>
-					    <arg>--enable-preview</arg> 
+	                <compilerArgs> 
 	                    <arg>--add-opens</arg>
 	                    <arg>java.base/java.lang=ALL-UNNAMED</arg> 
 						<arg>--add-opens</arg>
